# mqueue

./: .env  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  queue-system-html.html  queue-system-js.js  queue-system.css  render.yaml  repomix-output.txt  repopack-output.txt  requirements.txt
.next/: trace
.next/cache/: .tsbuildinfo
.next/server/: next-font-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @swc.js  @vercel.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/webpack/: webpack.21766626df4027fe.hot-update.js  webpack.6cd7de34ea0a3585.hot-update.js  webpack.a029d5a7793eac9e.hot-update.js  webpack.cbfc5d78f16193f2.hot-update.js  webpack.e4abaea4377074f9.hot-update.js
.next/types/app/: layout.ts  page.ts
client/: next.config.js  package-lock.json  package.json  requirements.txt  tailwind.config.js  tsconfig.json
client/.next/: trace
client/app/: globals.css  page.tsx
client/components/: .badminton-queue.tsx.swp  badminton-queue.module.css  badminton-queue.tsx  page.tsx
client/lib/: api.ts
components/: badminton-queue.tsx
mqueue/components/: badminton-queue.tsx
server/: main.py  next-font-manifest.json  pyproject.toml  server-reference-manifest.json  test_twilio.py  webpack-runtime.js
server/app/: config.py
server/app/api/v1/: game_queue.py  queue.py  sms.py
server/app/api/v2/: version.txt
server/app/services/: sms_service.py
server/vendor-chunks/: next.js
(+131 files in other folders)
