[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
fastapi = ">=0.100.0"
idna = "3.10"
pydantic = ">=2.0.0"
pydantic-core = "2.23.4"
sniffio = "1.3.1"
starlette = "0.41.2"
typing-extensions = "4.12.2"
twilio = ">=8.0.0"
python-dotenv = ">=1.0.0"
uvicorn = "^0.32.0"
slowapi = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
